# eosio-shipper

./: Cargo.toml  README.md
examples/: ship-dumper.rs
resources/: shipper.abi.json
src/: errors.rs  lib.rs  shipper_types.rs
